infra/k8s/parts-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parts
  template:
    metadata:
      labels:
        app: parts
    spec:
      containers:
        - name: parts
          image: codenicer/parts
---
apiVersion: v1
kind: Service
metadata:
  name: parts-srv
spec:
  selector:
    app: parts
  ports:
    - name: parts
      protocol: TCP
      port: 3000
      targetPort: 3000
